# jar

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  lakefile.lean
.cargo/: config.toml
.claude/skills/jar-review/: SKILL.md
.devcontainer/: Dockerfile
.github/workflows/: ci-spec.yml  genesis-merge.yml  genesis-pr-opened.yml  genesis-review.yml
Jar/: Accumulation.lean  PVM.lean  State.lean  Types.lean  Variant.lean
Jar/Commitment/: Circuit.lean  Merkle.lean  Prover.lean  Verifier.lean  WIProof.lean  WitnessEncoding.lean
Jar/PVM/: Instructions.lean  Interpreter.lean  Memory.lean
Jar/Test/: Accumulate.lean  BlockTest.lean  BlockTestMain.lean  StfServer.lean
Jar/Types/: Accounts.lean  Config.lean  Constants.lean  Header.lean  Numerics.lean  State.lean  Validators.lean  Work.lean
JarBook/: Accumulation.lean  Codec.lean  Consensus.lean  Crypto.lean  Erasure.lean  Merkle.lean  Services.lean
crates/grey/: Cargo.toml
crates/grey-bench/: Cargo.toml
crates/grey-bench/benches/: pvm_bench.rs
crates/grey-bench/examples/: compile_vs_exec.rs  ecrecover_single.rs
crates/grey-codec/: Cargo.toml
crates/grey-codec/src/: decode.rs  encode.rs  error.rs  lib.rs
crates/grey-consensus/: Cargo.toml
crates/grey-consensus/src/: lib.rs  safrole.rs
crates/grey-crypto/: Cargo.toml
crates/grey-crypto/src/: bandersnatch.rs  blake2b.rs  keccak.rs  lib.rs  shuffle.rs
crates/grey-erasure/: Cargo.toml
crates/grey-erasure/src/: lib.rs
crates/grey-erasure/tests/: test_vectors.rs
crates/grey-merkle/: Cargo.toml
crates/grey-merkle/src/: lib.rs  mmr.rs  state_serial.rs  trie.rs
crates/grey-network/: Cargo.toml
crates/grey-network/src/: lib.rs  service.rs
crates/grey-pvm/: Cargo.toml
crates/grey-pvm/src/: args.rs  instruction.rs  lib.rs  memory.rs  program.rs  vm.rs
crates/grey-pvm/src/recompiler/: asm.rs  codegen.rs  mod.rs
crates/grey-rpc/src/: lib.rs
crates/grey-services/: Cargo.toml
crates/grey-services/src/: accumulation.rs  lib.rs
crates/grey-state/: Cargo.toml
crates/grey-state/src/: accumulate.rs  assurances.rs  authorizations.rs  disputes.rs  history.rs  lib.rs  preimages.rs  refine.rs  reports.rs  safrole.rs  statistics.rs  transition.rs
crates/grey-state/tests/: stf_accumulate.rs  stf_assurances.rs  stf_authorizations.rs  stf_disputes.rs  stf_history.rs  stf_preimages.rs  stf_reports.rs  stf_safrole.rs  stf_statistics.rs
crates/grey-store/src/: lib.rs
crates/grey-types/: Cargo.toml
crates/grey-types/src/: config.rs  constants.rs  header.rs  lib.rs  serde_utils.rs  state.rs  validator.rs  work.rs
crates/grey/src/: audit.rs  main.rs  node.rs  testnet.rs
crates/javm/: Cargo.toml
crates/javm/src/: args.rs  gas_cost.rs  gas_sim.rs  instruction.rs  lib.rs  memory.rs  program.rs  vm.rs
crates/javm/src/recompiler/: asm.rs  codegen.rs  mod.rs  predecode.rs
docs/: conformance-testing.md  graypaper.md
grey/: Cargo.toml
grey/crates/grey/: Cargo.toml
grey/crates/grey-commitment/: Cargo.toml  DESIGN.md  README.md  bench.sh
grey/crates/grey-commitment/benches/: commitment.rs
grey/crates/grey-commitment/examples/: profile.rs
grey/crates/grey-commitment/src/: lib.rs  prover.rs  utils.rs  verifier.rs
grey/crates/grey-commitment/src/circuit/: mod.rs  threshold.rs  wiproof.rs
grey/crates/grey-commitment/src/field/: elem.rs
grey/crates/grey-da-commit/: Cargo.toml
grey/crates/grey-da-commit/src/: da.rs  encode.rs  error.rs  lib.rs
grey/crates/grey-da-commit/src/field/: elem.rs  fast_inverse.rs
grey/crates/grey-transpiler/src/: riscv.rs
grey/crates/grey/src/: guarantor.rs
grey/crates/javm/src/recompiler/: codegen.rs
scripts/: dump_state.py  replay_trace.py  run_conform.py
spec/: Makefile  lakefile.lean
spec/Genesis/: Scoring.lean
spec/Genesis/Cli/: Ranking.lean
spec/Genesis/Test/: Genesis.lean  GenesisJson.lean  GenesisJsonMain.lean
spec/Jar/: Commitment.lean
spec/Jar/Commitment/: Bridge.lean  GKR.lean  Goldilocks.lean
spec/Jar/Commitment/Examples/: Threshold.lean
spec/tests/vectors/genesis/: check_merge-no_reviews.input.json  check_merge-no_reviews.output.json  check_merge-reject_majority.input.json  check_merge-reject_majority.output.json  check_merge-single_merge.input.json  check_merge-single_merge.output.json  evaluate-first_commit.input.json  evaluate-first_commit.output.json  evaluate-invalid_targets.input.json  evaluate-invalid_targets.output.json  evaluate-multiple_reviewers.input.json  evaluate-multiple_reviewers.output.json  evaluate-multiple_reviewers_mid3.input.json  evaluate-multiple_reviewers_mid3.output.json  evaluate-multiple_reviewers_mid4.input.json  evaluate-multiple_reviewers_mid4.output.json  finalize-empty.input.json  finalize-empty.output.json  finalize-multi_contributor.input.json  finalize-multi_contributor.output.json  ranking-single.input.json  ranking-single.output.json  ranking-two_commits.input.json  ranking-two_commits.output.json  scoring-percentile_first.input.json  scoring-percentile_last.input.json  scoring-percentile_middle.input.json  scoring-percentile_middle.output.json  scoring-percentile_not_found.input.json  (+15 more)
spec/tools/: genesis-replay.sh
tests/vectors/accumulate/: accumulate_ready_queued_reports-1.output.jar080_tiny.json  enqueue_and_unlock_chain-3.output.jar080_tiny.json  enqueue_and_unlock_chain-4.output.jar080_tiny.json  enqueue_and_unlock_chain_wraps-2.output.jar080_tiny.json  enqueue_and_unlock_chain_wraps-4.output.jar080_tiny.json  enqueue_and_unlock_chain_wraps-5.output.jar080_tiny.json  enqueue_and_unlock_simple-2.output.jar080_tiny.json  enqueue_and_unlock_with_sr_lookup-2.output.jar080_tiny.json  process_one_immediate_report-1.output.jar080_tiny.json  queues_are_shifted-1.output.jar080_tiny.json  ready_queue_editing-2.output.jar080_tiny.json  ready_queue_editing-3.output.jar080_tiny.json  same_code_different_services-1.output.jar080_tiny.json  transfer_for_ejected_service-1.output.jar080_tiny.json  work_for_ejected_service-2.output.jar080_tiny.json  work_for_ejected_service-3.output.jar080_tiny.json
tools/: genesis-replay.sh
