[package]
name = "grey-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PVM benchmarks: grey interpreter vs recompiler vs polkavm"

[dependencies]
grey-pvm = { workspace = true }
grey-types = { workspace = true }
grey-transpiler = { workspace = true }
polkavm = { version = "0.30.0", features = ["generic-sandbox"] }
polkavm-common = "0.30.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pvm_bench"
harness = false
