[package]
name = "grey-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for JAM: Blake2b, Keccak, Ed25519, Bandersnatch, BLS."

[dependencies]
grey-types = { workspace = true }
blake2 = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
ark-vrf = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
