[package]
name = "grey-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P networking for JAM block, work-package, and vote propagation."

[dependencies]
grey-types = { workspace = true }
grey-codec = { workspace = true }
grey-crypto = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
