[package]
name = "grey-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chain state representation and block-level state transitions for JAM."

[dependencies]
grey-types = { workspace = true }
grey-codec = { workspace = true }
grey-crypto = { workspace = true }
grey-pvm = { workspace = true }
grey-merkle = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
