[package]
name = "grey"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JAM (Join-Accumulate Machine) blockchain node implementation."

[[bin]]
name = "grey"
path = "src/main.rs"

[dependencies]
grey-types = { workspace = true }
grey-codec = { workspace = true }
grey-crypto = { workspace = true }
grey-pvm = { workspace = true }
grey-merkle = { workspace = true }
grey-erasure = { workspace = true }
grey-state = { workspace = true }
grey-consensus = { workspace = true }
grey-services = { workspace = true }
grey-network = { workspace = true }
