[package]
name = "javm"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Join-Accumulate VM (JAVM)."

[features]
default = ["std"]
std = ["libc", "memoffset"]
signals = ["std"]

[dependencies]
libc = { version = "0.2", optional = true }
memoffset = { version = "0.9", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
