[package]
name = "grey-commitment"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ligerito polynomial commitment with accidental computer DA bridge"

[dependencies]
blake3 = "1"
bytemuck = { version = "1", features = ["derive"] }
rand = { workspace = true }
rand_core = "0.6"
rayon = { version = "1", optional = true }
sha2 = "0.10"
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"

[lib]
bench = false

[features]
default = ["std", "parallel"]
std = [
    "blake3/std",
    "rand/std",
    "rand/std_rng",
    "sha2/std",
]
parallel = ["dep:rayon"]
sha256-rows = []

[[bench]]
name = "commitment"
harness = false
path = "benches/commitment.rs"
