[package]
name = "grey-da-commit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tensor DA commitment for JAM: structured erasure root with row opening proofs"

[dependencies]
blake3 = "1"
bytemuck = { version = "1", features = ["derive"] }
rayon = { version = "1", optional = true }

[features]
default = ["std", "parallel"]
std = ["blake3/std"]
parallel = ["dep:rayon"]
